2007-06-30  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (resource_available):

	Use SoupDate for Expires header support.

2007-06-13  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use --without-libglade rather than --disable-libglade.

2007-06-13  Ross Burton  <ross@openedhand.com>

	* tools/Makefile.am:
	Dist the glade.

2007-05-26  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c:
	* libgssdp/gssdp-client.h:
	* libgssdp/gssdp-error.c:
	* libgssdp/gssdp-resource-browser.c:
	* libgssdp/gssdp-resource-browser.h:
	* libgssdp/gssdp-resource-group.c:
	* libgssdp/gssdp-resource-group.h:

	gtkdoc-fu.

2007-05-26  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* doc/Makefile.am:
	* doc/gssdp-docs.sgml:

	Added doc preamble.

2007-05-21  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c: (gssdp_client_class_init):
	* libgssdp/gssdp-client.h:
	* libgssdp/gssdp-error.c:
	* libgssdp/gssdp-resource-browser.c:
	(gssdp_resource_browser_class_init):
	* libgssdp/gssdp-resource-browser.h:
	* libgssdp/gssdp-resource-group.c:
	(gssdp_resource_group_class_init),
	(gssdp_resource_group_get_max_age):
	* libgssdp/gssdp-resource-group.h:

	Doc coverage to 100%.

2007-05-21  Jorn Baayen  <jorn@openedhand.com>

	* doc/Makefile.am:
	
	Exclude private bits.

	* doc/gssdp-docs.sgml:

	Add title.

	* libgssdp/gssdp-client.c: (gssdp_client_class_init):

	Mark 'message-received' as private.

2007-05-21  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:

	Point to gupnp.org.

	* tools/Makefile.am:

	Include path to glade file.

	* po/*: 

	Added missing files.

2007-05-21  Jorn Baayen  <jorn@openedhand.com>

	* tools/gssdp-device-sniffer.glade:

	Some UI cleanup.

2007-05-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (append_device),
	(resource_available_cb), (create_device_treemodel),
	(setup_treeviews):

	Replace 'Notify' and 'Last Notify' fields with 'First Notify'.
